force-app/main/default/objects/sfqz__Quiz_Question__c/fields/sfqz__Answer_A__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Answer_A__c</fullName>
    <label>Answer A</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>